--- a/style/add.css
+++ b/style/add.css
@@ -49,7 +49,7 @@ div#add{
     color: white;
 }
 
-#modalFoto{
+.modal{
     background-color: rgba(0, 0, 0, 0.236);
     position: fixed;
     top: 0px;
@@ -61,6 +61,45 @@ div#add{
     height: 100vh;
 }
 
+#modalFoto{
+    
+}
+
+#confirmAddContent{
+    background-color: white;
+    width: 60%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#confirmAddContent>h1{
+    margin-bottom: 10px;
+}
+
+#confirmAddContent>h1>span{
+    color: red;
+}
+#confirmAddContent>div{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+#confirmAddContent input{
+    width: 200px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 1.2em;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+}
+#confirmAddContent input#confirm{
+    background-color: green;
+}
+#confirmAddContent input#cancel{
+    background-color: red;
+}
 #modalFotoContent{
     background-color: white;
     width: 50%;
