--- a/style/style.css
+++ b/style/style.css
@@ -3,25 +3,95 @@
     padding: 0px;
     box-sizing: border-box;
 }
-li{
-    list-style: none;
-}
+
 body{
     background-color: #000120;
-
+    width: 100%;
+    height: 100%;
 }
 
 nav{
+    width: 100%;
+    height: 50px;
     background-color: rgb(33, 33, 33);
     color: white;
-    width: 100px;
-    height: calc(100vh - 100px);
-    float: left;
     padding: 10px;
-    border-right: 1px solid black;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0px;
+}
+
+nav ul{
+    display: flex;
+}
+
+nav li{
+    margin-left: 20px;
+}
+
+li{
+    list-style: none;
+}
+
+#topHits{
+    width: 100%;
+    height: 50vh;
+    background-color: gray;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+#contentTopHits{
+    width: 30vw;
+    height: 90%;
+    display: flex;
+    overflow: hidden;
+}
+
+#cards{
+    display: flex;
+    transition: 1s;
+}
+
+
+.card{
+    width: 30vw;
+    height: 100%;
+    background-color: black;
+    border-radius: 20px;
+    padding: 25px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.card h1{
+    color: white;
+}
+
+main{
+    display: flex;
+    color: white;
+    width: 100%;
+    margin-bottom: 100px;
+    height: 40vw;
+}
+
+main section{
+    background-color: rgb(33, 33, 33);
+    width: 25%;
+    border-right: 1px solid black;
+    padding: 25px;
+}
+
+
+#animes{
+    width: 75%;
+    height: 100%;
 }
 .anime{
     display: flex;
@@ -33,15 +103,20 @@ nav{
     padding: 35px;
 }
 
+#animesMusics{
+    overflow: auto;
+    height: 100%;
+    width: 75%;
+}
 
 footer{
     width: 100vw;
     height: 100px;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     color: white;
     background-color: rgb(33, 33, 33);
-    box-shadow: 0px -1px 10px #310458;
+    box-shadow: 0px -1px 5px #310458;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -69,11 +144,3 @@ span.material-symbols-outlined{
 img{
     width: 100px;
 }
-
-.content{
-    overflow: auto;
-    height: calc(100vh - 100px);
-}
-
-
-
