--- a/style/load.css
+++ b/style/load.css
@@ -8,7 +8,7 @@
     display: none;
     justify-content: center;
     align-items: center;
-    
+    z-index: 30;
 }
 #circleLoad{
     width: 100px;
