--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,25 @@ main section{
     width: 25%;
     border-right: 1px solid black;
     padding: 25px;
+    overflow: auto;
+}
+
+#playListPlaying{
+    padding-left: 20px;
+    margin-top: 10px;
+
+}
+
+#playListPlaying li{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    display: flex;
+    width: 90%;
+}
+#playListPlaying li.playing{
+    border: 1px solid rgb(255, 255, 255);
 }
 
 
@@ -116,17 +135,20 @@ main section{
 }
 
 footer{
-    width: 100vw;
+    width: 100%;
     height: 100px;
     position: fixed;
     bottom: 0px;
     color: white;
     background-color: rgb(33, 33, 33);
     box-shadow: 0px -1px 5px #310458;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-content: space-between;
 }
+
+
 
 .music{
     display: flex;
@@ -136,6 +158,11 @@ footer{
     color: white;
     background-color: #00023f;
     border-bottom: 1px solid rgba(255, 255, 255, 0.407);
+}
+
+#infoMusic{
+    display: flex;
+    align-items: center;
 }
 
 #controlsMusic{
@@ -163,9 +190,37 @@ button{
 }
 
 span.material-symbols-outlined{
-    font-size: 50px;
+    font-size: 35px;
+    margin-left: 35px;
+}
+
+#optionsVolume{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 25px;
+}
+
+#volume{
+    height: 5px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 70%;
+    margin-left: 20px;
+}
+
+#volume::-webkit-slider-thumb{
+    box-shadow: 1px 1px 1px #000000;
+    border: 1px solid #000000;
+    height: 25px;
+    width: 25px;
+    border-radius: 25px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
 }
 
 img{
+    padding: 15px;
     width: 100px;
 }
