--- a/style/modais.css
+++ b/style/modais.css
@@ -8,6 +8,7 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    z-index: 50;
 }
 
 .contentModal{
@@ -72,4 +73,32 @@
     justify-content: space-evenly;
     align-items: center;
 }
+#modalGenresContent{
+    width: 50%;
+    height: 70%;
+    
+}
+
+#listGeneros{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+
+#listGeneros li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#listGeneros li:hover{
+    background-color: rgba(0, 0, 0, 0.292);
+}
+
+
+
 
