--- a/style/sobre.css
+++ b/style/sobre.css
@@ -20,8 +20,42 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 1px 1px 1px white;
 }
 
 h1{
-    
+    width: 100%;
+    text-align: center;
+    background-color: grey;
+}
+h2{
+    width: 100%;
+    text-align: center;
+}
+
+#text{
+    border: 1px solid black;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    padding: 25px;
+    font-size: 20px;
+}
+
+p{
+    margin-bottom: 15px;
+}
+
+button{
+    margin-top: 50px;
+    width: 300px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: aqua;
+}
+
+button a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
 }
